--- a/home.html
+++ b/home.html
@@ -22,8 +22,10 @@
 </div>
 
 <div style="color: #666;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
-  <h3 style="text-align:center;">title</h3>
-  <p>hey
+  <h3 style="text-align:center;">WHY US?</h3>
+  <p>Do you want to revitalize your business? The Harvard Business Review reports that “nearly half of companies say they don’t have the digital skills they need.”
+Be part of the 50% that has those skills. Join Cool Solutions - Grapevine's premier institution for website branding. 
+We use our expertise and experience to guide your brand into the 21st media century. 
 </p>
 </div>
 
